[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
force_single_line = true
profile = "black"
skip_gitignore = true

[tool.poetry]
authors = ["celest <celestin.grenier@mhcomm.fr>"]
description = ""
name = "girl"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.12.13"
aiosqlite = "^0.21.0"
asyncinotify = "^4.2.1"
coolname = "^2.2.0"
python = "^3.11"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
coverage = "^7.8.0"
pytest = "^7.4.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
